tests/logical/logical.exp
Error -------------------------------------------------------------------------------------------------- logical.js:8:12

Cannot return `x && '123'` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:8:12
   8|     return x && '123';
                 ^

References:
   logical.js:7:13
   7|     var x = false;
                  ^^^^^ [1]
   logical.js:6:23
   6| function logical1a(): number { // expected `: boolean`
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- logical.js:23:12

Cannot return `false && '123'` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:23:12
   23|     return false && '123';
                  ^^^^^ [1]

References:
   logical.js:22:23
   22| function logical2a(): number { // expected `: boolean`
                             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:101:12

Cannot return `(x != null) && (x > 10)` because boolean [1] is incompatible with string [2]. [incompatible-return]

   logical.js:101:12
   101|     return x != null && x > 10;
                   ^^^^^^^^^ [1]

References:
   logical.js:99:23
    99| function logical3a(): string { // expected `: boolean`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:101:25

Cannot return `(x != null) && (x > 10)` because boolean [1] is incompatible with string [2]. [incompatible-return]

   logical.js:101:25
   101|     return x != null && x > 10;
                                ^^^^^^ [1]

References:
   logical.js:99:23
    99| function logical3a(): string { // expected `: boolean`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:109:12

Cannot return `(x != null) && x` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:109:12
   109|     return x != null && x;
                   ^^^^^^^^^ [1]

References:
   logical.js:107:23
   107| function logical3b(): number { // expected `: boolean | number`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:117:12

Cannot return `(x != undefined) && x` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:117:12
   117|     return x != undefined && x;
                   ^^^^^^^^^^^^^^ [1]

References:
   logical.js:115:24
   115| function logical3c(): ?number { // expected `: boolean | ?number`
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:124:12

Cannot return `x && '123'` because boolean [1] is incompatible with string [2]. [incompatible-return]

   logical.js:124:12
   124|     return x && '123';
                   ^

References:
   logical.js:123:22
   123| function logical4(x: boolean): string { // expected `: boolean | string`
                             ^^^^^^^ [1]
   logical.js:123:32
   123| function logical4(x: boolean): string { // expected `: boolean | string`
                                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:148:12

Cannot return `x || 0` because boolean [1] is incompatible with string [2]. [incompatible-return]

   logical.js:148:12
   148|     return x || 0;
                   ^

References:
   logical.js:147:13
   147|     var x = true;
                    ^^^^ [1]
   logical.js:146:23
   146| function logical5c(): string { // expected `: boolean`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:176:12

Cannot return `true || '123'` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:176:12
   176|     return true || '123';
                   ^^^^ [1]

References:
   logical.js:175:23
   175| function logical6d(): number { // expected `: boolean`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:281:12

Cannot return `x || (1 && 'foo')` because boolean [1] is incompatible with string [2]. [incompatible-return]

   logical.js:281:12
   281|     return x || (1 && 'foo');
                   ^

References:
   logical.js:280:13
   280|     var x = true;
                    ^^^^ [1]
   logical.js:279:23
   279| function logical8f(): string { // expected `: boolean`
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:291:22

Cannot return `x || y || false` because: [incompatible-return]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   logical.js:291:22
   291|     return x || y || false;
                             ^^^^^ [1]

References:
   logical.js:290:4
   290| ): number | string { // expected `: number | string | boolean`
           ^^^^^^ [2]
   logical.js:290:13
   290| ): number | string { // expected `: number | string | boolean`
                    ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ logical.js:315:22

Cannot return `x && y && false` because: [incompatible-return]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   logical.js:315:22
   315|     return x && y && false;
                             ^^^^^ [1]

References:
   logical.js:314:4
   314| ): number | string { // expected `: number | string | boolean`
           ^^^^^^ [2]
   logical.js:314:13
   314| ): number | string { // expected `: number | string | boolean`
                    ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ logical.js:322:12

Cannot return `false && x && y` because boolean [1] is incompatible with array type [2]. [incompatible-return]

   logical.js:322:12
   322|     return false && x && y;
                   ^^^^^ [1]

References:
   logical.js:321:44
   321| function logical10b(x: number, y: string): Array<any> { // expected `: boolean`
                                                   ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:329:12

Cannot return `x && false && y` because number [1] is incompatible with array type [2]. [incompatible-return]

   logical.js:329:12
   329|     return x && false && y;
                   ^

References:
   logical.js:328:24
   328| function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                               ^^^^^^ [1]
   logical.js:328:44
   328| function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                   ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:329:17

Cannot return `x && false && y` because boolean [1] is incompatible with array type [2]. [incompatible-return]

   logical.js:329:17
   329|     return x && false && y;
                        ^^^^^ [1]

References:
   logical.js:328:44
   328| function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                   ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:348:18

Cannot assign `y || true` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   logical.js:348:18
   348|         y = y || true; // expected a number
                         ^^^^ [1]

References:
   logical.js:346:24
   346| function logical11b(y: number): number {
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:348:18

boolean [1] is incompatible with number [2]. [incompatible-type]

   logical.js:348:18
   348|         y = y || true; // expected a number
                         ^^^^ [1]

References:
   logical.js:346:24
   346| function logical11b(y: number): number {
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:363:12

Cannot return `y` because boolean [1] is incompatible with number [2]. [incompatible-return]

   logical.js:363:12
   363|     return y;
                   ^

References:
   logical.js:361:13
   361|         z = false;
                    ^^^^^ [1]
   logical.js:356:24
   356| function logical12a(): number {
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:371:18

Cannot assign `y && true` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   logical.js:371:18
   371|         y = y && true; // expected a number
                         ^^^^ [1]

References:
   logical.js:369:24
   369| function logical12b(y: number): number {
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:371:18

boolean [1] is incompatible with number [2]. [incompatible-type]

   logical.js:371:18
   371|         y = y && true; // expected a number
                         ^^^^ [1]

References:
   logical.js:369:24
   369| function logical12b(y: number): number {
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:381:13

Cannot return array literal because number [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:381:13
   381|         {x: x && "bar"},
                    ^

References:
   logical.js:379:23
   379| function logical13(x: number): Array<{x: string}> {
                              ^^^^^^ [1]
   logical.js:379:42
   379| function logical13(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:383:21

Cannot return array literal because boolean [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:383:21
   383|         {x: true && false},
                            ^^^^^ [1]

References:
   logical.js:379:42
   379| function logical13(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:384:13

Cannot return array literal because boolean [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:384:13
   384|         {x: false && false},
                    ^^^^^ [1]

References:
   logical.js:379:42
   379| function logical13(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:397:13

Cannot return array literal because number [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:397:13
   397|         {x: x || "bar"},
                    ^

References:
   logical.js:395:23
   395| function logical14(x: number): Array<{x: string}> {
                              ^^^^^^ [1]
   logical.js:395:42
   395| function logical14(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:399:22

Cannot return array literal because boolean [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:399:22
   399|         {x: false || true},
                             ^^^^ [1]

References:
   logical.js:395:42
   395| function logical14(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:400:13

Cannot return array literal because boolean [1] is incompatible with string [2] in property `x` of array element.
[incompatible-return]

   logical.js:400:13
   400|         {x: true || false},
                    ^^^^ [1]

References:
   logical.js:395:42
   395| function logical14(x: number): Array<{x: string}> {
                                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:510:11

Cannot return `x.y && x.z` because string [1] is incompatible with boolean [2]. [incompatible-return]

   logical.js:510:11
   510|   return (x.y && x.z); // error: x.y is a string
                  ^^^

References:
   logical.js:509:29
   509| function logical19a(x: { y: string, z: boolean }): boolean {
                                    ^^^^^^ [1]
   logical.js:509:52
   509| function logical19a(x: { y: string, z: boolean }): boolean {
                                                           ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:513:11

Cannot return `x.y || x.z` because string [1] is incompatible with boolean [2]. [incompatible-return]

   logical.js:513:11
   513|   return (x.y || x.z); // error: x.y is a string
                  ^^^

References:
   logical.js:512:29
   512| function logical19b(x: { y: string, z: boolean }): boolean {
                                    ^^^^^^ [1]
   logical.js:512:52
   512| function logical19b(x: { y: string, z: boolean }): boolean {
                                                           ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:523:10

Cannot cast `x && x.y` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   logical.js:523:10
   523|   ((x && x.y): number); // error, x.y is a string (no error about x)
                 ^^^

References:
   logical.js:522:27
   522| function logical21(x: {y: string} & {}): void {
                                  ^^^^^^ [1]
   logical.js:523:16
   523|   ((x && x.y): number); // error, x.y is a string (no error about x)
                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:530:10

Cannot return `!x` because boolean [1] is incompatible with boolean literal `false` [2]. [incompatible-return]

   logical.js:530:10
   530|   return !x; // error
                 ^^ [1]

References:
   logical.js:529:32
   529| function logical22a(x: mixed): false {
                                       ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:534:10

Cannot return `!x` because boolean [1] is incompatible with boolean literal `false` [2]. [incompatible-return]

   logical.js:534:10
   534|   return !x; // error
                 ^^ [1]

References:
   logical.js:532:32
   532| function logical22b(x: mixed): false {
                                       ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:538:10

Cannot return `!x` because boolean [1] is incompatible with boolean literal `false` [2]. [incompatible-return]

   logical.js:538:10
   538|   return !x; // error
                 ^^ [1]

References:
   logical.js:536:32
   536| function logical22c(x: mixed): false {
                                       ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:542:10

Cannot return `!x` because boolean [1] is incompatible with boolean literal `false` [2]. [incompatible-return]

   logical.js:542:10
   542|   return !x; // error
                 ^^ [1]

References:
   logical.js:540:32
   540| function logical22d(x: mixed): false {
                                       ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ logical.js:554:10

Cannot return `!x` because boolean literal `true` [1] is incompatible with boolean literal `false` [2].
[incompatible-return]

   logical.js:554:10
   554|   return !x; // ok TODO fails
                 ^^ [1]

References:
   logical.js:552:32
   552| function logical22g(x: mixed): false {
                                       ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- logical.js:564:4

`OpaqueFalse` [1] is not supported by unclassified use NotT. [incompatible-use]

   logical.js:564:4
   564|   (!x: false); // error
           ^^

References:
   logical.js:563:24
   563| function logical23a(x: OpaqueFalse) {
                               ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- logical.js:565:4

`OpaqueFalse` [1] is not supported by unclassified use NotT. [incompatible-use]

   logical.js:565:4
   565|   (!x: true); // error
           ^^

References:
   logical.js:563:24
   563| function logical23a(x: OpaqueFalse) {
                               ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- logical.js:568:4

`OpaqueTrue` [1] is not supported by unclassified use NotT. [incompatible-use]

   logical.js:568:4
   568|   (!x: false); // error
           ^^

References:
   logical.js:567:24
   567| function logical23b(x: OpaqueTrue) {
                               ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- logical.js:569:4

`OpaqueTrue` [1] is not supported by unclassified use NotT. [incompatible-use]

   logical.js:569:4
   569|   (!x: true); // error
           ^^

References:
   logical.js:567:24
   567| function logical23b(x: OpaqueTrue) {
                               ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- logical.js:572:4

Cannot cast `!x` to boolean literal `false` because boolean literal `true` [1] is incompatible with boolean literal
`false` [2]. [incompatible-cast]

   logical.js:572:4
   572|   (!x: false); // error
           ^^ [1]

References:
   logical.js:572:8
   572|   (!x: false); // error
               ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- logical.js:577:4

Cannot cast `!x` to boolean literal `true` because boolean literal `false` [1] is incompatible with boolean literal
`true` [2]. [incompatible-cast]

   logical.js:577:4
   577|   (!x: true); // error
           ^^ [1]

References:
   logical.js:577:8
   577|   (!x: true); // error
               ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- logical.js:582:4

Cannot cast `!x` to boolean literal `false` because boolean literal `true` [1] is incompatible with boolean literal
`false` [2]. [incompatible-cast]

   logical.js:582:4
   582|   (!x: false); // error
           ^^ [1]

References:
   logical.js:582:8
   582|   (!x: false); // error
               ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- logical.js:587:4

Cannot cast `!x` to boolean literal `true` because boolean literal `false` [1] is incompatible with boolean literal
`true` [2]. [incompatible-cast]

   logical.js:587:4
   587|   (!x: true); // error
           ^^ [1]

References:
   logical.js:587:8
   587|   (!x: true); // error
               ^^^^ [2]



Found 42 errors
